# notekit

./: .gitignore  CMakeLists.txt  Makefile  README.md  about.cpp  about.h  base64.h  change_here.sh  com.github.blackhole89.notekit.yaml  com.github.notekit.desktop  config.h  config.h.in  config.h.meson.in  drawing.cpp  drawing.h  imagewidgets.cpp  imagewidgets.h  install-clatexmath.sh  link.cpp  link.h  main.cpp  mainwindow.cpp  mainwindow.h  meson.build  meson_options.txt  navigation.cpp  navigation.h  notebook.cpp  notebook.h  notebook_clipboard.hpp  notebook_highlight.hpp  notebook_widgets.hpp  notekit.mk  notekit.project  notekit.workspace  settings.cpp  settings.h  snap_launch_notekit.sh  symlink.sh  windows.patch
.github/workflows/: ccpp.yml  ci.yml  flatpak.yml  latest-release.yml  package-deb.yml  windows.yml
Apple/: INSTALL.OSX.md  llvm.patch
Apple/NoteKit.app/Contents/: Info.plist
Apple/NoteKit.app/Contents/MacOS/: .brew
Apple/NoteKit.app/Contents/Resources/: NoteKit.icns
build-aux/: postinstall.py
data/: default_config.json  preferences.glade  stylesheet.css  toolbar.glade
data/fonts/: readme.charter
data/icons/hicolor/: index.theme
debian/: changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  notekit.cron.d.ex  notekit.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/patches/: fix-clatexmath-2  fix-cmake-version  remove-fc-deps  series
debian/source/: options
devel/: .gitignore  gnome  notesbase  sourceview
freedesktop/: com.github.blackhole89.notekit.desktop  com.github.blackhole89.notekit.metainfo.xml  install.sh  meson.build  notekit.desktop
gnome/: com.github.blackhole89.notekit.gschema.xml  meson.build  notekit.gschema.xml
pkgs/flatpak/: com.github.blackhole89.notekit.yaml
snap/: snapcraft.yaml
sourceview/: classic.xml  def.lang  markdown-basic.lang  markdown.lang  markdown.lang.in  markdownlisting.lang  notekit.xml  stylesheet.css
subprojects/: clatexmath.wrap
utils/: notekit-migrate-gsettings
